--- a/index.html
+++ b/index.html
@@ -2,20 +2,10 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <!-- <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline'" /> -->
+    <meta http-equiv="Content-Security-Policy" content="script-src 'self'" />
     <title>Electron Chat</title>
   </head>
   <body>
     <h1>Hello World</h1>
-    <script>
-      const path = require('path');
-      const parsed = path.parse('/home/user/dir/file.txt');
-      console.log(parsed.base);
-      console.log(parsed.ext);
-
-      const script = document.createElement('script');
-      script.src = "https://filipjerga.now.sh/danger.js";
-      document.body.appendChild(script);
-    </script>
   </body>
 </html>
