--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Electron Chat</title>
   </head>
   <body>
-    <h1>Hello World</h1>
+    <div id="electronChat">
+    </div>
   </body>
+  <script src="./src/js/index.js"></script>
 </html>
