--- a/index.html
+++ b/index.html
@@ -9,5 +9,5 @@
     <div id="electronChat">
     </div>
   </body>
-  <script src="./src/js/index.js"></script>
+  <script src="./build/js/app.js"></script>
 </html>
