--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <title>Electron Chat</title>
   </head>
   <body>
-    <div id="electronChat">
-    </div>
+    <div id="chatApp"></div>
   </body>
   <script src="./build/js/app.js"></script>
 </html>
