Save user online status to FS

--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="Content-Security-Policy" content="script-src 'self'" />
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="script-src 'self' https://electron-chat-3441b.firebaseio.com https://s-usc1c-nss-282.firebaseio.com" />
     <title>Electron Chat</title>
   </head>
   <body>
