--- a/splash.html
+++ b/splash.html
@@ -8,6 +8,8 @@
     <title>Electron Chat</title>
   </head>
   <body>
-    <div id="chatApp"></div>
+    <div>
+      <h1>Loading Application...</h1>
+    </div>
   </body>
 </html>
