Splash screen improvements

--- a/splash.html
+++ b/splash.html
@@ -6,10 +6,12 @@
       http-equiv="Content-Security-Policy"
       content="script-src 'self'" />
     <title>Electron Chat</title>
+    <link rel="stylesheet" href="./splash.css">
   </head>
   <body>
-    <div>
-      <h1>Loading Application...</h1>
+    <div class="loading-container">
+      <h1>Chat App Loading...</h1>
+      <img src="./assets/images/react.svg" class="react-logo"></div>
     </div>
   </body>
 </html>
