--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta
       http-equiv="Content-Security-Policy"
-      content="script-src 'self' https://electron-chat-3441b.firebaseio.com https://s-usc1c-nss-282.firebaseio.com" />
+      content="script-src 'self' https://*.firebaseio.com" />
     <title>Electron Chat</title>
   </head>
   <body>
